add graphics and text in  languages

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -699,17 +699,17 @@
   "Support image recognition": "Unterstützung der Bilderkennung",
   "Optimize code writing": "Die Code-Schreibweise optimieren",
   "Suitable for reasoning and writing": "Geeignet für Schlussfolgerung und Schreiben",
-  "Multimodal, suitable for daily tasks": "Multimodaler, geeignet für alltägliche Aufgaben",
+  "Multimodal graphics and text, suitable for daily tasks": "Multimodale Grafiken und Texte, geeignet für tägliche Aufgaben",
   "Strong language skills": "Starke Sprachkenntnisse",
   "Enhanced reasoning, suitable for complex tasks": "Erweiterte Logik, geeignet für komplexe Aufgaben",
   "Lightweight general-purpose model with fast response speed": "Leichtgewichtiges Allgemeinzweckmodell mit hoher Reaktionsgeschwindigkeit",
-  "Multimodal, suitable for most tasks": "Multimodale, geeignet für die meisten Aufgaben",
+  "Multimodal graphics and text, suitable for most tasks": "Multimodale Grafiken und Texte, geeignet für die meisten Aufgaben",
   "Well-suited for handling daily tasks": "Geeignet für die Bearbeitung alltäglicher Aufgaben",
   "Strong writing and coding skills": "Starke Schreib- und Codierungsfähigkeiten",
-  "Multimodal with fast response": "Multimodale, schnelle Reaktion",
+  "Multimodal graphics and text, quick response": "Multimodale Grafiken und Texte, schnelle Reaktion",
   "Expert in Q&A, lively expression style": "Fachkundig in Q&A, lebhafter Ausdrucksstil",
   "Strong writing ability, high stability": "Starke Schreibfähigkeit, hohe Stabilität",
-  "Multimodal with enhanced reasoning": "Multimodale, verstärkte Argumentation",
+  "Multimodal graphics and text, reasoning enhancement": "Multimodale Grafiken und Texte mit verbesserter Logikverarbeitung",
   "Using advanced reasoning": "Verwendung fortschrittlicher Argumentation",
   "Good at fast coding and analysis": "Fachkundig in schnellem Coding und Analyse",
   "Skilled in writing and generating ideas": "Fachkundig in Schreiben und Ideenentwicklung",
@@ -936,5 +936,8 @@
   "new_wallet": "Geldbörse erstellen",
   "Small Tip:": "Kleiner Tipp:",
   "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Wenn Sie ein Gmail-Konto verwenden und den Bestätigungscode nicht in Ihrem Posteingang finden, wurde er höchstwahrscheinlich in Ihren Spam-Ordner gefiltert.",
-  "To claim the reward, you must first complete user verification !": "Um die Belohnung zu erhalten, müssen Sie zuerst die Benutzerüberprüfung abschließen !"
+  "To claim the reward, you must first complete user verification !": "Um die Belohnung zu erhalten, müssen Sie zuerst die Benutzerüberprüfung abschließen !",
+  "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "Der DBC-Kontostand ist unzureichend. Sie benötigen mindestens 0,01 DBC in Ihrer Wallet.",
+  "Failed to send transaction !": "Transaktion fehlgeschlagen!",
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "Der DGC-Kontostand reicht nicht aus. Sie können einen Freund einladen, um 3000 DGC zu erhalten."
 }
