--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -698,17 +698,17 @@
   "Support image recognition": "Prise en charge de la reconnaissance d'images",
   "Optimize code writing": "Optimiser l'écriture de code",
   "Suitable for reasoning and writing": "Adapté au raisonnement et à l'écriture",
-  "Multimodal, suitable for daily tasks": "Multimodal, adapté aux tâches quotidiennes",
+  "Multimodal graphics and text, suitable for daily tasks": "Gráficos y texto multimodal, adecuado para tareas diarias",
   "Strong language skills": "Fortes compétences linguistiques",
   "Enhanced reasoning, suitable for complex tasks": "Raisonnement renforcé, approprié pour des tâches complexes",
   "Lightweight general-purpose model with fast response speed": "Modèle généraliste léger avec une vitesse de réponse rapide",
-  "Multimodal, suitable for most tasks": "Multimodal, approprié pour la plupart des tâches",
+  "Multimodal graphics and text, suitable for most tasks": "Gráficos y texto multimodal, adecuado para la mayoría de tareas",
   "Well-suited for handling daily tasks": "Très approprié pour gérer les tâches quotidiennes",
   "Strong writing and coding skills": "Fortes compétences en écriture et en codage",
-  "Multimodal with fast response": "Multimodal avec réponse rapide",
+  "Multimodal graphics and text, quick response": "Gráficos y texto multimodal, respuesta rápida",
   "Expert in Q&A, lively expression style": "Expert en Q&A, style d'expression vif",
   "Strong writing ability, high stability": "Forte capacité d'écriture, haute stabilité",
-  "Multimodal with enhanced reasoning": "Multimodal avec raisonnement amélioré",
+  "Multimodal graphics and text, reasoning enhancement": "Gráficos y texto multimodal con mejora de razonamiento",
   "Using advanced reasoning": "Utilisant un raisonnement avancé",
   "Good at fast coding and analysis": "Aptitude à la codage rapide et à l'analyse",
   "Skilled in writing and generating ideas": "Habile en écriture et en génération d'idées",
@@ -937,5 +937,8 @@
   "new_wallet": "Crear monedero",
   "Small Tip:": "Pequeño consejo:",
   "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Si estás usando una cuenta de Gmail y no encuentras el código de verificación en tu bandeja de entrada, es muy probable que se haya filtrado a tu carpeta de Spam.",
-  "To claim the reward, you must first complete user verification !": "Para reclamar la recompensa, primero debes completar la verificación de usuario !"
+  "To claim the reward, you must first complete user verification !": "Para reclamar la recompensa, primero debes completar la verificación de usuario !",
+  "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "El saldo de DBC es insuficiente. Necesitas tener al menos 0.01 DBC en tu monedero.",
+  "Failed to send transaction !": "¡Error al enviar la transacción!",
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "El saldo de DGC no es suficiente para pagar. Puedes invitar a un amigo para obtener 3000 DGC."
 }
