--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -698,17 +698,17 @@
   "Support image recognition": "Prise en charge de la reconnaissance d'images",
   "Optimize code writing": "Optimiser l'écriture de code",
   "Suitable for reasoning and writing": "Adapté au raisonnement et à l'écriture",
-  "Multimodal, suitable for daily tasks": "Multimodal, adapté aux tâches quotidiennes",
+  "Multimodal graphics and text, suitable for daily tasks": "Graphiques et texte multimodaux, adaptés aux tâches quotidiennes",
   "Strong language skills": "Fortes compétences linguistiques",
   "Enhanced reasoning, suitable for complex tasks": "Raisonnement renforcé, approprié pour des tâches complexes",
   "Lightweight general-purpose model with fast response speed": "Modèle généraliste léger avec une vitesse de réponse rapide",
-  "Multimodal, suitable for most tasks": "Multimodal, approprié pour la plupart des tâches",
+  "Multimodal graphics and text, suitable for most tasks": "Graphiques et texte multimodaux, adaptés à la plupart des tâches",
   "Well-suited for handling daily tasks": "Très approprié pour gérer les tâches quotidiennes",
   "Strong writing and coding skills": "Fortes compétences en écriture et en codage",
-  "Multimodal with fast response": "Multimodal avec réponse rapide",
+  "Multimodal graphics and text, quick response": "Graphiques et texte multimodaux, réponse rapide",
   "Expert in Q&A, lively expression style": "Expert en Q&A, style d'expression vif",
   "Strong writing ability, high stability": "Forte capacité d'écriture, haute stabilité",
-  "Multimodal with enhanced reasoning": "Multimodal avec raisonnement amélioré",
+  "Multimodal graphics and text, reasoning enhancement": "Graphiques et texte multimodal avec amélioration du raisonnement",
   "Using advanced reasoning": "Utilisant un raisonnement avancé",
   "Good at fast coding and analysis": "Aptitude à la codage rapide et à l'analyse",
   "Skilled in writing and generating ideas": "Habile en écriture et en génération d'idées",
@@ -937,5 +937,8 @@
   "new_wallet": "Créer un portefeuille",
   "Small Tip:": "Petit conseil :",
   "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Si vous utilisez un compte Gmail et que vous ne trouvez pas le code de vérification dans votre boîte de réception, il est très probable qu'il ait été filtré dans votre dossier Spam.",
-  "To claim the reward, you must first complete user verification !": "Pour recevoir la récompense, vous devez d'abord terminer la vérification de l'utilisateur !"
+  "To claim the reward, you must first complete user verification !": "Pour recevoir la récompense, vous devez d'abord terminer la vérification de l'utilisateur !",
+  "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "Le solde DBC est insuffisant. Vous devez avoir au moins 0,01 DBC dans votre portefeuille.",
+  "Failed to send transaction !": "Échec de l'envoi de la transaction !",
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "Le solde DGC n'est pas suffisant pour payer. Vous pouvez inviter un ami pour obtenir 3000 DGC."
 }
