--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -699,17 +699,17 @@
   "Support image recognition": "Mendukung pengenalan gambar",
   "Optimize code writing": "Mengoptimalkan penulisan kode",
   "Suitable for reasoning and writing": "Cocok untuk penalaran dan penulisan",
-  "Multimodal, suitable for daily tasks": "Multimodal, cocok untuk tugas-tugas harian",
+  "Multimodal graphics and text, suitable for daily tasks": "Grafik dan teks multimodal, cocok untuk tugas sehari-hari",
   "Strong language skills": "Kemampuan Bahasa yang Kuat",
   "Enhanced reasoning, suitable for complex tasks": "Penalaran yang ditingkatkan, cocok untuk tugas-tugas kompleks",
   "Lightweight general-purpose model with fast response speed": "Model umum ringan, kecepatan respons cepat",
-  "Multimodal, suitable for most tasks": "Multimodal, cocok untuk sebagian besar tugas",
+  "Multimodal graphics and text, suitable for most tasks": "Grafik dan teks multimodal, cocok untuk sebagian besar tugas",
   "Well-suited for handling daily tasks": "Sangat cocok untuk menangani tugas harian",
   "Strong writing and coding skills": "Kemampuan menulis dan pengkodean yang kuat",
-  "Multimodal with fast response": "Multimodal dengan respons cepat",
+  "Multimodal graphics and text, quick response": "Grafik dan teks multimodal, respons cepat",
   "Expert in Q&A, lively expression style": "Ahli dalam Tanya Jawab, gaya ekspresi yang ceria",
   "Strong writing ability, high stability": "Kemampuan menulis yang kuat, stabilitas tinggi",
-  "Multimodal with enhanced reasoning": "Multimodal dengan penalaran yang ditingkatkan",
+  "Multimodal graphics and text, reasoning enhancement": "Grafik dan teks multimodal dengan peningkatan penalaran",
   "Using advanced reasoning": "Menggunakan penalaran canggih",
   "Good at fast coding and analysis": "Pandai dalam pengkodean cepat dan analisis",
   "Skilled in writing and generating ideas": "Terampil dalam menulis dan menghasilkan ide",
@@ -938,5 +938,8 @@
   "new_wallet": "Buat dompet",
   "Small Tip:": "Tip Kecil:",
   "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Jika Anda menggunakan akun Gmail dan tidak dapat menemukan kode verifikasi di Kotak Masuk, kemungkinan besar kode tersebut telah difilter ke folder Spam Anda.",
-  "To claim the reward, you must first complete user verification !": "Untuk mengklaim hadiah, Anda harus terlebih dahulu menyelesaikan verifikasi pengguna !"
+  "To claim the reward, you must first complete user verification !": "Untuk mengklaim hadiah, Anda harus terlebih dahulu menyelesaikan verifikasi pengguna !",
+  "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "Saldo DBC tidak mencukupi. Anda perlu memiliki setidaknya 0,01 DBC di dompet Anda.",
+  "Failed to send transaction !": "Gagal mengirim transaksi!",
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "Saldo DGC tidak cukup untuk membayar. Anda dapat mengundang teman untuk mendapatkan 3000 DGC."
 }
