--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -699,17 +699,17 @@
   "Support image recognition": "画像認識をサポートしています",
   "Optimize code writing": "コードの書き方を最適化します",
   "Suitable for reasoning and writing": "推理と執筆に適している",
-  "Multimodal, suitable for daily tasks": "マルチモーダル、日常的なタスクに適している",
+  "Multimodal graphics and text, suitable for daily tasks": "マルチモーダルなグラフィックとテキスト、日常業務に適しています",
   "Strong language skills": "すぐれたげんごのうりょく",
   "Enhanced reasoning, suitable for complex tasks": "強化された推理能力、複雑なタスクに適しています",
   "Lightweight general-purpose model with fast response speed": "軽量汎用モデルで、応答速度が速いです",
-  "Multimodal, suitable for most tasks": "マルチモーダルで、ほとんどのタスクに適しています",
+  "Multimodal graphics and text, suitable for most tasks": "マルチモーダルなグラフィックとテキスト、ほとんどの業務に適しています",
   "Well-suited for handling daily tasks": "日常的なタスクの処理に適しています",
   "Strong writing and coding skills": "優れたライティングとコーディング能力",
-  "Multimodal with fast response": "マルチモーダルで高速応答",
+  "Multimodal graphics and text, quick response": "マルチモーダルなグラフィックとテキスト、高速レスポンス",
   "Expert in Q&A, lively expression style": "質疑応答に長け、表現スタイルは活発",
   "Strong writing ability, high stability": "ライティング能力が高く、安定性が高い",
-  "Multimodal with enhanced reasoning": "推論能力が強化されたマルチモーダル",
+  "Multimodal graphics and text, reasoning enhancement": "マルチモーダルグラフィックとテキスト、推論機能強化",
   "Using advanced reasoning": "高度な推論を使用",
   "Good at fast coding and analysis": "高速コーディングと分析に長けている",
   "Skilled in writing and generating ideas": "ライティングとアイデア生成に熟練",
@@ -938,5 +938,8 @@
   "new_wallet": "ウォレットを作成",
   "Small Tip:": "小さなヒント：",
   "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Gmailアカウントを使用していて、受信トレイに確認コードが見つからない場合、スパムフォルダに振り分けられている可能性が高いです。",
-  "To claim the reward, you must first complete user verification !": "報酬を受け取るには、まずユーザー認証を完了する必要があります !"
+  "To claim the reward, you must first complete user verification !": "報酬を受け取るには、まずユーザー認証を完了する必要があります !",
+  "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "DBC残高が不足しています。ウォレットに0.01 DBC以上必要です。",
+  "Failed to send transaction !": "トランザクションの送信に失敗しました！",
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "DGC残高が不足しています。友達を招待すると3000 DGCを獲得できます。"
 }
