--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -699,17 +699,17 @@
   "Support image recognition": "이미지 인식을 지원합니다",
   "Optimize code writing": "코드 작성 최적화합니다",
   "Suitable for reasoning and writing": "추론과 글쓰기에 적합하다",
-  "Multimodal, suitable for daily tasks": "멀티모달, 일상적인 작업에 적합하다",
+  "Multimodal graphics and text, suitable for daily tasks": "멀티모달 그래픽 및 텍스트, 일상 작업에 적합",
   "Strong language skills": "뛰어난 언어 능력",
   "Enhanced reasoning, suitable for complex tasks": "강화된 추론, 복잡한 과제에 적합합니다",
   "Lightweight general-purpose model with fast response speed": "경량 다목적 모델로 응답 속도가 빠릅니다",
-  "Multimodal, suitable for most tasks": "멀티모달, 대부분의 작업에 적합",
+  "Multimodal graphics and text, suitable for most tasks": "멀티모달 그래픽 및 텍스트, 대부분의 작업에 적합",
   "Well-suited for handling daily tasks": "일상 작업 처리에 매우 적합",
   "Strong writing and coding skills": "강력한 글쓰기 및 코딩 능력",
-  "Multimodal with fast response": "빠른 응답을 지원하는 멀티모달",
+  "Multimodal graphics and text, quick response": "멀티모달 그래픽 및 텍스트, 빠른 응답",
   "Expert in Q&A, lively expression style": "Q&A 전문가, 활기찬 표현 스타일",
   "Strong writing ability, high stability": "강력한 글쓰기 능력, 높은 안정성",
-  "Multimodal with enhanced reasoning": "추론能力이 강화된 멀티모달",
+  "Multimodal graphics and text, reasoning enhancement": "멀티모달 그래픽 및 텍스트, 추론 기능 강화",
   "Using advanced reasoning": "고급 추론을 사용함",
   "Good at fast coding and analysis": "빠른 코딩과 분석에 능함",
   "Skilled in writing and generating ideas": "글쓰기와 아이디어 생성에 숙련",
@@ -938,5 +938,8 @@
   "new_wallet": "지갑 생성",
   "Small Tip:": "작은 팁:",
   "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Gmail 계정을 사용 중이고 수신함에서 인증 코드를 찾을 수 없다면, 스팸 폴더로 필터링되었을 가능성이 높습니다.",
-  "To claim the reward, you must first complete user verification !": "보상을 받으려면 먼저 사용자 인증을 완료해야 합니다 !"
+  "To claim the reward, you must first complete user verification !": "보상을 받으려면 먼저 사용자 인증을 완료해야 합니다 !",
+  "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "DBC 잔액이 부족합니다. 지갑에 최소 0.01 DBC가 필요합니다.",
+  "Failed to send transaction !": "거래 전송 실패!",
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "DGC 잔액이 부족합니다. 친구를 초대하면 3000 DGC를 얻을 수 있습니다."
 }
