--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -699,17 +699,17 @@
   "Support image recognition": "Suporte para o reconhecimento de imagens",
   "Optimize code writing": "Otimizar a escrita de código",
   "Suitable for reasoning and writing": "Adequado para raciocínio e escrita",
-  "Multimodal, suitable for daily tasks": "Multimodal, adequado para tarefas diárias",
+  "Multimodal graphics and text, suitable for daily tasks": "Gráficos e texto multimodal, adequado para tarefas diárias",
   "Strong language skills": "Forte habilidade linguística",
   "Enhanced reasoning, suitable for complex tasks": "Raciocínio aprimorado, adequado para tarefas complexas",
   "Lightweight general-purpose model with fast response speed": "Modelo genérico leve com alta velocidade de resposta",
-  "Multimodal, suitable for most tasks": "Multimodal, adequado para a maioria das tarefas",
+  "Multimodal graphics and text, suitable for most tasks": "Gráficos e texto multimodal, adequado para a maioria das tarefas",
   "Well-suited for handling daily tasks": "Muito adequado para lidar com tarefas diárias",
   "Strong writing and coding skills": "Fortes habilidades de escrita e codificação",
-  "Multimodal with fast response": "Multimodal com resposta rápida",
+  "Multimodal graphics and text, quick response": "Gráficos e texto multimodal, resposta rápida",
   "Expert in Q&A, lively expression style": "Experto em Perguntas e Respostas, estilo de expressão vivo",
   "Strong writing ability, high stability": "Forte capacidade de escrita, alta estabilidade",
-  "Multimodal with enhanced reasoning": "Multimodal com raciocínio aprimorado",
+  "Multimodal graphics and text, reasoning enhancement": "Gráficos e texto multimodal com aprimoramento de raciocínio",
   "Using advanced reasoning": "Utilizando raciocínio avançado",
   "Good at fast coding and analysis": "Hábil em codificação rápida e análise",
   "Skilled in writing and generating ideas": "Hábil em escrever e gerar ideias",
@@ -938,5 +938,8 @@
   "new_wallet": "Criar carteira",
   "Small Tip:": "Pequena Dica:",
   "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Se você está usando uma conta do Gmail e não consegue encontrar o código de verificação na sua Caixa de Entrada, é muito provável que ele tenha sido filtrado para a sua pasta de Spam.",
-  "To claim the reward, you must first complete user verification !": "Para reivindicar a recompensa, você deve primeiro concluir a verificação do usuário !"
+  "To claim the reward, you must first complete user verification !": "Para reivindicar a recompensa, você deve primeiro concluir a verificação do usuário !",
+  "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "Saldo de DBC insuficiente. Você precisa ter pelo menos 0,01 DBC na sua carteira.",
+  "Failed to send transaction !": "Falha ao enviar transação!",
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "O saldo de DGC não é suficiente para pagar. Você pode convidar um amigo para obter 3000 DGC."
 }
