--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -698,17 +698,17 @@
   "Support image recognition": "Поддерживает распознавание изображений",
   "Optimize code writing": "Оптимизировать написание кода",
   "Suitable for reasoning and writing": "Подходит для рассуждений и письма",
-  "Multimodal, suitable for daily tasks": "Мультимодальный, подходит для ежедневных задач",
+  "Multimodal graphics and text, suitable for daily tasks": "Мультимодальная графика и текст, подходит для повседневных задач",
   "Strong language skills": "Прочные языковые навыки",
   "Enhanced reasoning, suitable for complex tasks": "Укрепенное рассуждение, подходящее для сложных задач",
   "Lightweight general-purpose model with fast response speed": "Легковесная универсальная модель с высокой скоростью отклика",
-  "Multimodal, suitable for most tasks": "Мультимодальный, подходит для большинства задач",
+  "Multimodal graphics and text, suitable for most tasks": "Мультимодальная графика и текст, подходит для большинства задач",
   "Well-suited for handling daily tasks": "Хорошо подходит для выполнения ежедневных задач",
   "Strong writing and coding skills": "Сильные навыки письма и программирования",
-  "Multimodal with fast response": "Мультимодальный с быстрым ответом",
+  "Multimodal graphics and text, quick response": "Мультимодальная графика и текст, быстрый отклик",
   "Expert in Q&A, lively expression style": "Эксперт в вопросах и ответах, оживленный стиль выражения",
   "Strong writing ability, high stability": "Сильная навыковая писателя, высокая стабильность",
-  "Multimodal with enhanced reasoning": "Мультимодальный с улучшенной логикой",
+  "Multimodal graphics and text, reasoning enhancement": "Мультимодальная графика и текст с улучшенной логической обработкой",
   "Using advanced reasoning": "Использование avançанной логики",
   "Good at fast coding and analysis": "Хорошо справляется с быстрой программной и аналитической работой",
   "Skilled in writing and generating ideas": "Опытный в письме и генерации идей",
@@ -937,5 +937,8 @@
   "new_wallet": "Создать кошелек",
   "Small Tip:": "Маленький совет:",
   "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Если вы используете учетную запись Gmail и не можете найти код подтверждения во Входящих, скорее всего, он был отфильтрован в папку «Спам».",
-  "To claim the reward, you must first complete user verification !": "Чтобы получить вознаграждение, сначала необходимо пройти проверку пользователя !"
+  "To claim the reward, you must first complete user verification !": "Чтобы получить вознаграждение, сначала необходимо пройти проверку пользователя !",
+  "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "Недостаточно DBC. На вашем кошельке должно быть не менее 0,01 DBC.",
+  "Failed to send transaction !": "Ошибка отправки транзакции!",
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "Недостаточно средств на балансе DGC. Вы можете пригласить друга, чтобы получить 3000 DGC."
 }
