--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -698,17 +698,17 @@
   "Support image recognition": "รองรับการจำแนกภาพ",
   "Optimize code writing": "ปรับปรุงการเขียนโค้ด",
   "Suitable for reasoning and writing": "เหมาะสำหรับการให้เหตุผลและการเขียน",
-  "Multimodal, suitable for daily tasks": "มัลติมอดัล, เหมาะสำหรับการดำเนินงานประจำวัน",
+  "Multimodal graphics and text, suitable for daily tasks": "กราฟิกและข้อความแบบมัลติโมดัล เหมาะสำหรับงานประจำวัน",
   "Strong language skills": "ความสามารถภาษาที่แข็งแกร่ง",
   "Enhanced reasoning, suitable for complex tasks": "การให้เหตุผลที่ได้รับการเสริมสร้าง เหมาะสำหรับงานที่ซับซ้อน",
   "Lightweight general-purpose model with fast response speed": "โมเดลอเนกประสงค์น้ำหนักเบาที่ตอบสนองเร็ว",
-  "Multimodal, suitable for most tasks": "หลายโหมด เหมาะกับงานส่วนใหญ่",
+  "Multimodal graphics and text, suitable for most tasks": "กราฟิกและข้อความแบบมัลติโมดัล เหมาะสำหรับงานส่วนใหญ่",
   "Well-suited for handling daily tasks": "เหมาะสำหรับการจัดการงานประจำวัน",
   "Strong writing and coding skills": "ทักษะการเขียนและเขียนโค้ดแข็งแกร่ง",
-  "Multimodal with fast response": "หลายโหมด พร้อมตอบสนองเร็ว",
+  "Multimodal graphics and text, quick response": "กราฟิกและข้อความแบบมัลติโมดัล, การตอบสนองที่รวดเร็ว",
   "Expert in Q&A, lively expression style": "เชี่ยวชาญถามตอบ มีสไตล์การแสดงออกมีชีวิตชีวา",
   "Strong writing ability, high stability": "ความสามารถในการเขียนดี มีเสถียรภาพสูง",
-  "Multimodal with enhanced reasoning": "หลายโหมด พร้อมความสามารถในการใช้เหตุผลที่พัฒนาขึ้น",
+  "Multimodal graphics and text, reasoning enhancement": "กราฟิกและข้อความแบบมัลติโมดัล พร้อมการเสริมสร้างการให้เหตุผล",
   "Using advanced reasoning": "ใช้การให้เหตุผลขั้นสูง",
   "Good at fast coding and analysis": "เก่งในการเขียนโค้ดเร็วและการวิเคราะห์",
   "Skilled in writing and generating ideas": "มีความเชี่ยวชาญในการเขียนและสร้างสรรค์แนวคิด",
@@ -937,5 +937,8 @@
   "new_wallet": "สร้างกระเป๋าเงิน",
   "Small Tip:": "เคล็ดลับเล็กๆ น้อยๆ:",
   "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "หากคุณใช้บัญชี Gmail และไม่พบรหัสยืนยันในกล่องจดหมายของคุณ มีความเป็นไปได้สูงที่มันจะถูกกรองไปยังโฟลเดอร์สแปม",
-  "To claim the reward, you must first complete user verification !": "เพื่อรับรางวัล คุณต้องทำการยืนยันตัวตนให้เสร็จสิ้นก่อน"
+  "To claim the reward, you must first complete user verification !": "เพื่อรับรางวัล คุณต้องทำการยืนยันตัวตนให้เสร็จสิ้นก่อน",
+  "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "ยอด DBC ไม่เพียงพอ จำเป็นต้องมียอดในกระเป๋าเงินอย่างน้อย 0.01 DBC",
+  "Failed to send transaction !": "ส่งธุรกรรมล้มเหลว!",
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "ยอด DGC ไม่เพียงพอสำหรับการชำระ คุณสามารถเชิญเพื่อนเพื่อรับ 3000 DGC"
 }
