--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -699,17 +699,17 @@
   "Support image recognition": "Görüntü tanıma desteği sağlar",
   "Optimize code writing": "Kod yazımını optimize et",
   "Suitable for reasoning and writing": "Mantıkça çıkarım yapmak ve yazmaya uygun",
-  "Multimodal, suitable for daily tasks": "Multimodal, günlük görevlere uygun",
+  "Multimodal graphics and text, suitable for daily tasks": "Çok modlu grafikler ve metin, günlük görevler için uygundur",
   "Strong language skills": "Güçlü Dil Becerileri",
   "Enhanced reasoning, suitable for complex tasks": "Güçlendirilmiş mantık, karmaşık görevler için uygundur",
   "Lightweight general-purpose model with fast response speed": "Hafif genel amaçlı model, hızlı yanıt verme kabiliyetine sahiptir",
-  "Multimodal, suitable for most tasks": "Çoklu mod, çoğu görev için uygun",
+  "Multimodal graphics and text, suitable for most tasks": "Çok modlu grafikler ve metin, çoğu görev için uygundur",
   "Well-suited for handling daily tasks": "Günlük görevleri işlemek için ideal",
   "Strong writing and coding skills": "Güçlü yazma ve kodlama becerileri",
-  "Multimodal with fast response": "Hızlı yanıtlı çoklu mod",
+  "Multimodal graphics and text, quick response": "Çok modlu grafikler ve metin, hızlı yanıt",
   "Expert in Q&A, lively expression style": "Soru-cevap uzmanı, canlı ifade tarzı",
   "Strong writing ability, high stability": "Güçlü yazma yeteneği, yüksek kararlılık",
-  "Multimodal with enhanced reasoning": "Gelişmiş akıl yürütmeli çoklu mod",
+  "Multimodal graphics and text, reasoning enhancement": "Çok modlu grafikler ve metin, akıl yürütme geliştirme",
   "Using advanced reasoning": "Gelişmiş akıl yürütme kullanımı",
   "Good at fast coding and analysis": "Hızlı kodlama ve analizde başarılı",
   "Skilled in writing and generating ideas": "Yazma ve fikir üretmede yetenekli",
@@ -938,5 +938,8 @@
   "new_wallet": "Cüzdan oluştur",
   "Small Tip:": "Küçük Bir İpucu:",
   "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Bir Gmail hesabı kullanıyorsanız ve doğrulama kodunu Gelen Kutunuzda bulamıyorsanız, büyük olasılıkla Spam Klasörünüze filtrelenmiştir.",
-  "To claim the reward, you must first complete user verification !": "Ödülü talep etmek için önce kullanıcı doğrulamasını tamamlamanız gerekir !"
+  "To claim the reward, you must first complete user verification !": "Ödülü talep etmek için önce kullanıcı doğrulamasını tamamlamanız gerekir !",
+  "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "DBC bakiyesi yetersiz. Cüzdanınızda en az 0.01 DBC olmalıdır.",
+  "Failed to send transaction !": "İşlem gönderilemedi!",
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "DGC bakiyesi ödeme yapmaya yetmiyor. 3000 DGC kazanmak için bir arkadaşınızı davet edebilirsiniz."
 }
