--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -699,17 +699,17 @@
   "Support image recognition": "Hỗ trợ nhận dạng hình ảnh",
   "Optimize code writing": "Tối ưu hóa việc viết mã",
   "Suitable for reasoning and writing": "Phù hợp với lý luận và viết văn",
-  "Multimodal, suitable for daily tasks": "Đa môđun, phù hợp với các nhiệm vụ hàng ngày",
+  "Multimodal graphics and text, suitable for daily tasks": "Đồ họa và văn bản đa phương thức, phù hợp cho công việc hàng ngày",
   "Strong language skills": "Khả năng ngôn ngữ mạnh mẽ",
   "Enhanced reasoning, suitable for complex tasks": "Lý luận được tăng cường, phù hợp với các nhiệm vụ phức tạp",
   "Lightweight general-purpose model with fast response speed": "Mô hình đa năng nhẹ với tốc độ phản hồi nhanh",
-  "Multimodal, suitable for most tasks": "Đa phương thức, phù hợp với hầu hết tác vụ",
+  "Multimodal graphics and text, suitable for most tasks": "Đồ họa và văn bản đa phương thức, phù hợp với hầu hết công việc",
   "Well-suited for handling daily tasks": "Phù hợp xử lý công việc hàng ngày",
   "Strong writing and coding skills": "Mạnh về viết lách và lập trình",
-  "Multimodal with fast response": "Đa phương thức, phản hồi nhanh",
+  "Multimodal graphics and text, quick response": "Đồ họa và văn bản đa phương thức, phản hồi nhanh",
   "Expert in Q&A, lively expression style": "Chuyên gia hỏi đáp, phong cách diễn đạt sinh động",
   "Strong writing ability, high stability": "Khả năng viết tốt, ổn định cao",
-  "Multimodal with enhanced reasoning": "Đa phương thức với khả năng suy luận nâng cao",
+  "Multimodal graphics and text, reasoning enhancement": "Đồ họa và văn bản đa phương thức, nâng cao khả năng lập luận",
   "Using advanced reasoning": "Sử dụng suy luận nâng cao",
   "Good at fast coding and analysis": "Giỏi lập trình nhanh và phân tích",
   "Skilled in writing and generating ideas": "Thành thạo viết lách và tạo ý tưởng",
@@ -927,5 +927,8 @@
   "new_wallet": "Tạo ví",
   "Small Tip:": "Mẹo nhỏ:",
   "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Nếu bạn đang sử dụng tài khoản Gmail và không thể tìm thấy mã xác minh trong Hộp thư đến, rất có thể nó đã bị lọc vào thư mục Spam.",
-  "To claim the reward, you must first complete user verification !": "Để nhận phần thưởng, trước tiên bạn phải hoàn thành xác minh người dùng !"
+  "To claim the reward, you must first complete user verification !": "Để nhận phần thưởng, trước tiên bạn phải hoàn thành xác minh người dùng !",
+  "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "Số dư DBC không đủ. Bạn cần có ít nhất 0,01 DBC trong ví của mình.",
+  "Failed to send transaction !": "Gửi giao dịch thất bại!",
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "Số dư DGC không đủ để thanh toán. Bạn có thể mời bạn bè để nhận 3000 DGC."
 }
