--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -698,17 +698,17 @@
   "Support image recognition": "支持图片识别",
   "Optimize code writing": "适合推理和写作",
   "Suitable for reasoning and writing": "适合推理和写作",
-  "Multimodal, suitable for daily tasks": "多模态，适合日常任务",
+  "Multimodal graphics and text, suitable for daily tasks": "多模态图文，适合日常任务",
   "Strong language skills": "语言能力强",
   "Enhanced reasoning, suitable for complex tasks": "加强推理，适合复杂任务",
   "Lightweight general-purpose model with fast response speed": "轻量通用模型，响应速度快",
-  "Multimodal, suitable for most tasks": "多模态，适用于大多数任务",
+  "Multimodal graphics and text, suitable for most tasks": "多模态图文，适用于大多数任务",
   "Well-suited for handling daily tasks": "适合处理日常任务",
   "Strong writing and coding skills": "强写作与编码",
-  "Multimodal with fast response": "多模态，快速响应",
+  "Multimodal graphics and text, quick response": "多模态图文，快速响应",
   "Expert in Q&A, lively expression style": "擅长问答，表达风格活泼",
   "Strong writing ability, high stability": "写作能力强，稳定性高",
-  "Multimodal with enhanced reasoning": "多模态，推理增强",
+  "Multimodal graphics and text, reasoning enhancement": "多模态图文，推理增强",
   "Using advanced reasoning": "使用高级推理",
   "Good at fast coding and analysis": "擅长快速编码和分析",
   "Skilled in writing and generating ideas": "擅长写作和构思想法",
@@ -937,5 +937,8 @@
   "new_wallet": "创建钱包",
   "Small Tip:": "小提示：",
   "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "如果您使用的是Gmail账户，并且在收件箱中找不到验证码，那么它很可能被过滤到了垃圾邮件文件夹中。",
-  "To claim the reward, you must first complete user verification !": "领取奖励需要先完成用户认证 !"
+  "To claim the reward, you must first complete user verification !": "领取奖励需要先完成用户认证 !",
+  "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "DBC数量不足，需要钱包余额中至少有0.01个DBC。",
+  "Failed to send transaction !": "交易发送失败！",
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "DGC余额不足支付。您可以邀请好友获得3000 DGC。"
 }
